# GaokaoMachineLearning

./: .gitignore  README.md  pyproject.toml  source_list.csv
configs/: actionable_source_fallback_registry.csv  cold_queue_entry_registry_seed.csv  discovery_seeds.csv  discovery_seeds_211_non985.csv  discovery_seeds_211_non985_full.csv  discovery_seeds_engineering_520_fullsweep.csv  discovery_seeds_engineering_entry_supplemental.csv  discovery_seeds_non211_authoritative.csv  engineering_focus_211_non985.csv  project_config.yml
docs/: authenticated_scraping_playbook.md  automated_crawl_pipeline.md  data_dictionary.md  gpt54_reference_trend_pool_handoff.md  gpt55_project_drift_review_prompt.md  gpt55_takeover_handoff.md  gpt55_web_attachment_bottleneck_decision.md  gptpro_trend_pivot_evidence_manifest.md  gptpro_trend_pivot_prompt.md  guangxi_gaokao_original_plan.md  guangxi_gaokao_project_plan.md  manual_collection_playbook.md  model_specification.md  non211_authoritative_expansion_notes.md  original_thread_return_handoff.md  pre_ml_d1_g1_gpt_review_decisions.md  pre_ml_d2_g2_beijing_gongye_latest_plan_score_alignment.md  pre_ml_d2_g2_changan_reference_year_field_mapping.md  pre_ml_d2_g2_gpt_review_decisions.md  pre_ml_d2_g2_hefei_reference_year_field_mapping.md  pre_ml_d2_g2_huabei_source_identity_fix.md  pre_ml_d2_g2_nanhang_reference_year_field_mapping.md  pre_ml_d2_g2_request_row_fix_queue.md  pre_ml_d3_d4_gap_fill_acceptance_decisions.md  pre_ml_data_sufficiency_audit.md  pre_ml_g4_p1_source_reachability_preview.md  pre_ml_g4_p2_cached_entry_header_audit.md  (+161 more)
(+310 files in other folders)
