[project]
name = "guangxi-gaokao-planner"
version = "0.1.0"
description = "Guangxi gaokao major-group admission risk planning toolkit."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
ml = [
  "lightgbm>=4.3",
  "catboost>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
